--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,18 @@
 		<slf4j.version>1.5.6</slf4j.version>
 		<log4j.version>1.2.14</log4j.version>
 	</properties>
+	<organization>
+		<name>The Missing Link</name>
+	</organization>
+	<developers>
+		<developer>
+			<id>salil</id>
+			<name>Salil Walavalkar</name>
+			<roles>
+				<role>The Lone Developer</role>
+			</roles>
+		</developer>
+	</developers>
 	<!-- Build Management - Start -->
 	<build>
 		<pluginManagement>
@@ -38,4 +50,25 @@
 		</pluginManagement>
 	</build>
 	<!-- Build Management - End -->
+	<!-- JXR (source code cross-reference) reporting -->
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
